--- a/_notebooks/2022-10-02-tf-1-자격증.ipynb
+++ b/_notebooks/2022-10-02-tf-1-자격증.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# TensorFlow 2.0 \n",
-    ">  basic \n",
+    ">  basic, 시험전 준비도!\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
@@ -569,6 +569,78 @@
    "source": [
     "굳이 안 해도 되지만 시험때 해보면 좋지"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "일단 가상환경을 만들고 pycharm에 들어갈 것이다.\n",
+    "\n",
+    "검색에 `anaconda prompt` 쳐서 들어가기\n",
+    "\n",
+    "mac은 검색에 `terminal` 쳐서 들어가기\n",
+    "\n",
+    "`conda` 치고\n",
+    "\n",
+    "conda create -n 만들이름 python=3.7(원하는 버전)\n",
+    "\n",
+    "`conda activate 이름`\n",
+    "\n",
+    "(mac `source activate 이름`)\n",
+    "\n",
+    "pip list 깔려진 거 확인\n",
+    "\n",
+    "- `tensorflow 2.1.0`\n",
+    "- `tensorflow-datasets`\n",
+    "- `Pillow`\n",
+    "- `numpy`\n",
+    "- `urllib3`\n",
+    "\n",
+    "pip install tensorflow==2.1.0\n",
+    "- 원하는 버전 지정해서 깔기\n",
+    "\n",
+    "pip install tensorflow-datasets\n",
+    "\n",
+    "pip install Pillow\n",
+    "\n",
+    "pip install numpy\n",
+    "\n",
+    "pip install urllib3\n",
+    "\n",
+    "pycharm\n",
+    "\n",
+    "잘되나 확인\n",
+    "```python\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "xs = np.array([-1.0,0.0,1.0,2.0,3.0,4.0], dtype = float)\n",
+    "ys = np.array([5.0,6.0,7.0,8.0,9.0,10.0], dtype = float)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Dense(1, input_shape=[1]),\n",
+    "])\n",
+    "model.compile(optimizer = 'sgd',loss='mse')\n",
+    "model.fit(xs,ys,epochs=100,verbose=0)\n",
+    "\n",
+    "print(\"검증 완료 : {}\".format(model.predict([10.0])))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
