--- a/_notebooks/2022-10-12-ml-(6주차)_10월12일.ipynb
+++ b/_notebooks/2022-10-12-ml-(6주차)_10월12일.ipynb
@@ -356,6 +356,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d8020a7-41ac-43b8-9a7d-362a984ca488",
+   "metadata": {},
+   "source": [
+    "(서연 필기) 밑에 fig 다시 정의 안 해줬잖아. 그러니까 덮어쓴 거라 생각하면 돼"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 215,
    "id": "b936e84c-dbbb-4891-8ff3-dc3ed9939832",
@@ -1794,14 +1802,6 @@
    "source": [
     "`-` '/home/cgb4/.fastai/data/mnist_png/training/3/37912.png'의 이미지파일을 torchvision.io.read_image 를 이용하여 텐서로 만듬"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d6f5e66-976d-4193-8d62-834d79231a07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
