--- a/_notebooks/2022-10-19-ml_(7주차).ipynb
+++ b/_notebooks/2022-10-19-ml_(7주차).ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "732f0628-0d92-444c-bd72-619ca16ebe1e",
    "metadata": {
     "id": "732f0628-0d92-444c-bd72-619ca16ebe1e"
@@ -41,12 +41,12 @@
     "from fastai.vision.all import *\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import torchvision"
+    "import torchvision="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5bb9129a-d088-4fbf-a1d8-def8c6432908",
    "metadata": {
     "id": "1591ad5c-3f93-4723-96a3-88fa8f419c0f"
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a750d9e4-2502-4cc7-b308-b82f03d60b5d",
    "metadata": {
     "id": "a750d9e4-2502-4cc7-b308-b82f03d60b5d",
@@ -1100,7 +1100,7 @@
        " tensor([0.2037]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c97593d7-0b68-4252-be30-61351124a28a",
    "metadata": {
     "id": "c97593d7-0b68-4252-be30-61351124a28a",
@@ -1127,7 +1127,7 @@
        "          [2., 3.]]]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "c96644a7-1256-4569-ab00-81c4b029bbee",
    "metadata": {
     "id": "c96644a7-1256-4569-ab00-81c4b029bbee",
@@ -1152,7 +1152,7 @@
        "1.541"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "692cbde3-5f6f-4942-996a-64d7bda3fed0",
    "metadata": {
     "id": "692cbde3-5f6f-4942-996a-64d7bda3fed0",
@@ -1177,13 +1177,34 @@
        "tensor([[[[1.5410]]]], grad_fn=<ThnnConv2DBackward0>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_conv(_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "843f5a66-2e81-4743-a0ee-071743dc13f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.10.1'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.__version__"
    ]
   },
   {
