--- a/_notebooks/2022-10-19-ml_(7주차).ipynb
+++ b/_notebooks/2022-10-19-ml_(7주차).ipynb
@@ -3253,7 +3253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "id": "ab97e9d1-2026-4953-885a-8b5ea73eaa77",
    "metadata": {
     "id": "ab97e9d1-2026-4953-885a-8b5ea73eaa77"
@@ -3262,6 +3262,36 @@
    "source": [
     "ds1=torch.utils.data.TensorDataset(X,y)\n",
     "ds2=torch.utils.data.TensorDataset(XX,yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "71968d88-f629-47cf-b55b-45ce215075d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensorDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Dataset wrapping tensors.\n",
+       "\n",
+       "Each sample will be retrieved by indexing tensors along the first dimension.\n",
+       "\n",
+       "Args:\n",
+       "    *tensors (Tensor): tensors that have the same size of the first dimension.\n",
+       "\u001b[0;31mFile:\u001b[0m           ~/anaconda3/envs/csy/lib/python3.8/site-packages/torch/utils/data/dataset.py\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "torch.utils.data.TensorDataset?"
    ]
   },
   {
