--- a/_notebooks/2022-10-23-YOLO_개념.ipynb
+++ b/_notebooks/2022-10-23-YOLO_개념.ipynb
@@ -225,9 +225,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b005095c-37b5-4937-b1f9-0c93acc6f970",
+   "metadata": {},
+   "source": [
+    "### 본문"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85e20747-9677-4973-8503-1aacc6ba05c4",
+   "metadata": {},
+   "source": [
+    "- end to end 종단 간 학습 : 중간 개입 필요없음\n",
+    "- state-of-the-art\n",
+    "- unified modle for object detection\n",
+    "- 빠르지만 작은 물체에 대해 정확도는 떨어지는 경향"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5fe5307-9e8d-422a-9d02-634df9d833e8",
+   "metadata": {},
+   "source": [
+    "- 24개 conv\n",
+    "- 2개 layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61bc383e-7c28-4f11-826b-34309f12a1a7",
+   "metadata": {},
+   "source": [
+    "- object 있으면 람다값 5배(중요도 높게)\n",
+    "- object 없으면 람다값 0.5배(중요도 낮게)\n",
+    "- loss function과 highrst current IOU 비교"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9380fbd7-5149-4ec8-9965-6cf3e4d8ae2a",
+   "metadata": {},
+   "source": [
+    "(식)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ca6823d-d18f-409d-9295-976de8abb552",
+   "metadata": {},
+   "source": [
+    "$$\\lambda_{coord}\\sum^{S^2}_{i=0}\\sum^{B}_{j=0} \\mathbb{1}^{obj}_{ij} [(x_i - \\hat{x}_i)^2 + (y_i - \\hat{y}_i)^2]$$\n",
+    "$$+ \\lambda_{coord}\\sum^{S^2}_{i=0}\\sum^{B}_{j=0} \\mathbb{1}^{obj}_{ij} [(\\sqrt{w_i} - \\sqrt{\\hat{w}_i})^2 + (\\sqrt{h_i} - \\sqrt{\\hat{h}_i})^2]$$\n",
+    "$$+ \\sum^{S^2}_{i=0} \\sum^{B}_{j=0} \\mathbb{1}^{obj}_{ij} (C_i - \\hat{C}_i)^2$$\n",
+    "$$+ \\lambda_{noobj}\\sum^{S^2}_{i=0}\\sum^{B}_{j=0}\\mathbb{1}^{noobj}_{ij}(C_i - \\hat{C}_i)^2$$\n",
+    "$$+\\sum^{S^2}_{i=0}\\mathbb{1}^{obj}_{i} \\sum_{c \\in classes}(p_i(c) - \\hat{p}_i(c))^2$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10bd1e6f-dd64-417f-8ec6-5e1bfb5c8f5d",
+   "id": "0be7ec76-61a8-4fa5-9e4f-2c5633f70af7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
