--- a/_notebooks/2022-10-23-YOLO_개념.ipynb
+++ b/_notebooks/2022-10-23-YOLO_개념.ipynb
@@ -20,6 +20,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7335c75f-70fd-485e-93f4-41898af726f5",
+   "metadata": {},
+   "source": [
+    "https://github.com/solaris33/YOLO-v1-tf2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ce1c716-71a7-4ac5-bbe9-e10c2e099d89",
    "metadata": {
     "tags": []
@@ -283,9 +291,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a483ae0-486d-4509-9169-1f17ec75aa26",
+   "metadata": {},
+   "source": [
+    "### 딥러닝 논문 구현 프로젝트 파일 구조"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dca1e1c-5ca8-4716-99b6-1664d48d97f0",
+   "metadata": {},
+   "source": [
+    "- train.py\n",
+    "    - 모델 class를 인스턴스로 선언하고 for-loop을 돌면서 grdient descent를 수행하면서 parameter를 update하는 logic\n",
+    "- evaluate.py, test.py\n",
+    "    - training된 parameter를 불러와서 evaluation이나 test, inference를 진행하는 logic\n",
+    "- model.py\n",
+    "    - keras.subclassing 형태의 모델 구조 class 정의\n",
+    "- dataset.py\n",
+    "    - 데이터 전처리 밒 batch 단위로 묶는 logic\n",
+    "- utils.py\n",
+    "    - 딥러닝 메인 logic 외에 utility성 기능들을 모아 놓은 로직\n",
+    "- loss.py\n",
+    "    - 모델의 loss function을 정의"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0be7ec76-61a8-4fa5-9e4f-2c5633f70af7",
+   "id": "8d249c92-73a2-4296-8266-f985f3ec8ef9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -307,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
