--- a/_notebooks/2022-10-23-YOLO_개념.ipynb
+++ b/_notebooks/2022-10-23-YOLO_개념.ipynb
@@ -275,7 +275,7 @@
    "id": "9380fbd7-5149-4ec8-9965-6cf3e4d8ae2a",
    "metadata": {},
    "source": [
-    "(식)"
+    "(loss function)"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
