--- a/_notebooks/2022-10-23-YOLO_개념.ipynb
+++ b/_notebooks/2022-10-23-YOLO_개념.ipynb
@@ -318,9 +318,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c75d7432-8de9-4c7c-8a69-43bb4e686ff2",
+   "metadata": {},
+   "source": [
+    "conda install python=3.7 \n",
+    "바꿔줘야 tensorflow설치 가능\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d249c92-73a2-4296-8266-f985f3ec8ef9",
+   "id": "6c693d2c-4d13-4073-ad32-dce44f4d03f1",
    "metadata": {},
    "outputs": [],
    "source": []
