--- a/_notebooks/2022-10-30-데이터시각화2022_중간고사.ipynb
+++ b/_notebooks/2022-10-30-데이터시각화2022_중간고사.ipynb
@@ -3497,7 +3497,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3511,7 +3511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
