--- a/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
+++ b/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
@@ -1298,6 +1298,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c773721c-02cb-43ff-a59a-daaf58c34dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e4b2db12-c0a9-45e8-a513-d24ef93ab915",
    "metadata": {
@@ -1321,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 221,
    "id": "d72d68ce-d4ae-4f7d-863b-ae9db0616ba1",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1341,7 @@
        "'torch.FloatTensor'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 227,
    "id": "7cf34970-034c-4f08-92dc-ede18f19cd42",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1362,7 @@
        "torch.Size([150, 4])"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 228,
    "id": "9920caba-7059-4ac3-b1c8-3a4d7647182c",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 229,
    "id": "2ae9c86c-7e01-43e5-94a4-f723c4e59e07",
    "metadata": {},
    "outputs": [
@@ -1391,17 +1401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 232,
    "id": "63e5d467-d0ed-4a27-af3b-01ee8c142d59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a1 = torch.nn.Tanh()"
+    "a1 = torch.nn.ReLU()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 233,
    "id": "76b89c57-5bf5-4fc5-b061-cb4a43368fe4",
    "metadata": {},
    "outputs": [],
@@ -1411,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 234,
    "id": "51a98bfe-0a11-4868-a231-f235a7286ee2",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1431,7 @@
        "'torch.FloatTensor'"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,21 +1442,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 235,
    "id": "24ca8675-302e-4bc2-a375-b70569ba9597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1683,  0.9019],\n",
-       "        [-0.2348,  0.9122],\n",
-       "        [-0.1404,  0.8822],\n",
-       "        [-0.2398,  0.8930],\n",
-       "        [-0.1435,  0.8896]], grad_fn=<SliceBackward0>)"
+       "tensor([[0.0000, 2.1399],\n",
+       "        [0.0000, 1.9394],\n",
+       "        [0.0000, 2.0024],\n",
+       "        [0.0000, 2.0245],\n",
+       "        [0.0000, 2.1863]], grad_fn=<SliceBackward0>)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 236,
    "id": "5df1bd3e-8608-4add-8da5-4320a9db04c2",
    "metadata": {},
    "outputs": [],
@@ -1467,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 237,
    "id": "5e7290f4-edae-429c-acf0-23b8354bbd5a",
    "metadata": {},
    "outputs": [
@@ -1485,17 +1495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 240,
    "id": "8d059fe3-e8ba-457e-95c2-70b692a8530c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a2 = torch.nn.Sigmoid()"
+    "a2 = torch.nn.Softmax(dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 241,
    "id": "9970ea0b-0649-4c4c-84c7-757e089a5f08",
    "metadata": {},
    "outputs": [],
@@ -1505,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 242,
    "id": "24763c0f-23c6-4051-9096-b697db28d888",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1525,7 @@
        "'torch.FloatTensor'"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,21 +1536,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 243,
    "id": "4fd015a4-a309-43ba-b72b-6b9d571979f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.3363, 0.6536, 0.7001, 0.4965],\n",
-       "        [0.3390, 0.6531, 0.7018, 0.4942],\n",
-       "        [0.3439, 0.6459, 0.6899, 0.4974],\n",
-       "        [0.3522, 0.6412, 0.6877, 0.4938],\n",
-       "        [0.3402, 0.6494, 0.6942, 0.4973]], grad_fn=<SliceBackward0>)"
+       "tensor([[0.0444, 0.0308, 0.0025, 0.9223],\n",
+       "        [0.0555, 0.0394, 0.0039, 0.9013],\n",
+       "        [0.0542, 0.0387, 0.0038, 0.9034],\n",
+       "        [0.0537, 0.0384, 0.0037, 0.9042],\n",
+       "        [0.0432, 0.0300, 0.0024, 0.9244]], grad_fn=<SliceBackward0>)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 244,
    "id": "6e4754c1-e575-4714-8731-d15fd2ebbb1f",
    "metadata": {},
    "outputs": [],
@@ -1561,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 245,
    "id": "d992def9-2ce8-48c4-ac31-b0b6badb3e35",
    "metadata": {},
    "outputs": [],
@@ -1592,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09999e5f-84d1-4259-a335-ebb58468284b",
+   "id": "d7ff3d29-c52a-4a00-8fd4-c3d03b736a8a",
    "metadata": {
     "id": "7a7964b2-b065-4734-bd56-7dee45683ee0",
     "outputId": "02adc1a2-0fb5-4106-86c1-e5f121775527"
@@ -1721,7 +1731,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1735,7 +1745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
