--- a/_notebooks/2022-10-28-(중간고사)_딥러닝2022_중간고사풀이.ipynb
+++ b/_notebooks/2022-10-28-(중간고사)_딥러닝2022_중간고사풀이.ipynb
@@ -907,7 +907,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -921,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
