--- a/_notebooks/2022-09-29-ml_4주차_9월28일.ipynb
+++ b/_notebooks/2022-09-29-ml_4주차_9월28일.ipynb
@@ -2764,7 +2764,8 @@
    "cell_type": "markdown",
    "id": "d7903b15-772e-4dac-b354-6e5fa76b53b0",
    "metadata": {
-    "id": "d7903b15-772e-4dac-b354-6e5fa76b53b0"
+    "id": "d7903b15-772e-4dac-b354-6e5fa76b53b0",
+    "tags": []
    },
    "source": [
     "### ver1: net = torch.nn.Linear(1,1,bias=True) "
