--- a/_notebooks/2022-10-28-(중간고사)_딥러닝2022_중간고사풀이.ipynb
+++ b/_notebooks/2022-10-28-(중간고사)_딥러닝2022_중간고사풀이.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00400dcf-b6db-4cc0-a79e-6297a34e145b",
+   "id": "50d16a40-57a2-4b49-9766-72edd8730d8b",
    "metadata": {
-    "id": "00400dcf-b6db-4cc0-a79e-6297a34e145b",
     "tags": []
    },
    "source": [
-    "# 딥러닝2022 중간고사 -- 풀이"
+    "# 딥러닝2022 중간고사 -- 풀이\n",
+    "> 참고용\n",
+    "\n",
+    "- toc:true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: false\n",
+    "- author: 최서연\n",
+    "- categories: [Deep Learning]"
    ]
   },
   {
@@ -907,7 +914,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -921,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
