--- a/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
+++ b/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
@@ -2642,7 +2642,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2656,7 +2656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
