--- a/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
+++ b/_notebooks/2022-11-02-ml-중간고사_대체과제.ipynb
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1457,
    "id": "1f64660f-bc99-4a56-8779-0ac4b0edbad2",
    "metadata": {
     "tags": []
@@ -2510,7 +2510,7 @@
    "source": [
     "for epoc in range(2000): \n",
     "    ## 1 \n",
-    "    Xhat = net(Z)\n",
+    "    Xhat = net(Z.data)\n",
     "    ## 2 \n",
     "    loss=loss_fn(Xhat,X) \n",
     "    ## 3 \n",
@@ -2518,6 +2518,31 @@
     "    ## 4 \n",
     "    optimizr.step()\n",
     "    optimizr.zero_grad() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1460,
+   "id": "46d3f64e-5bac-484f-85cf-c6163376e69e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[-2.2554, -1.9404],\n",
+       "        [-1.5358, -1.1228],\n",
+       "        [-2.4729, -2.2332],\n",
+       "        [ 0.5188, -1.0162]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 1460,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.weight"
    ]
   },
   {
